geolocate now in div, along with a few css fixes, but z-index of dropdown still not working

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,15 +4,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #googleMap{
-  width:100%; 
-  min-height:500px; 
+  width:99.9%; 
+  min-height:70vh; 
   position: relative;
  /* z-index: -10;*/
 }
 
 #pac-input {
   padding: 10px;
-  margin: 10px;
+  margin-top: 20px;
 }
 
 /*.btn btn-default {
